--- a/manifest.json
+++ b/manifest.json
@@ -4,14 +4,14 @@
 "short_name": "Temperature converter",
 "description": "A basic temperature converter application that can convert to
 and from Celsius, Kelvin, and Fahrenheit",
-"start_url": "/",
+"start_url": ".",
 "background_color": "#2f3d58",
 "theme_color": "#2f3d58",
 "orientation": "any",
 "display": "standalone",
 "icons": [
 {
-"src": "/icon512.png",
+"src": "./icon512.png",
 "sizes": "512x512"
 }
 ]
